--- a/EasyPlayer/Base.lproj/LaunchScreen.storyboard
+++ b/EasyPlayer/Base.lproj/LaunchScreen.storyboard
@@ -21,8 +21,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EasyPlayer_lunch" translatesAutoresizingMaskIntoConstraints="NO" id="Czv-w8-2Dm">
-                                <rect key="frame" x="87.5" y="233.5" width="200" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EasyPlayer_60" translatesAutoresizingMaskIntoConstraints="NO" id="Czv-w8-2Dm">
+                                <rect key="frame" x="157.5" y="303.5" width="60" height="60"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2012-2018 www.EasyDarwin.org" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0KS-B3-L7k">
                                 <rect key="frame" x="41" y="630" width="293" height="17"/>
@@ -31,7 +31,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="v1.0.18.0209" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7Z-iv-RP8">
-                                <rect key="frame" x="147" y="453.5" width="82" height="17"/>
+                                <rect key="frame" x="147" y="383.5" width="82" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -54,6 +54,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="EasyPlayer_lunch" width="200" height="200"/>
+        <image name="EasyPlayer_60" width="60" height="60"/>
     </resources>
 </document>
