--- a/EasyPlayer/View/Base.lproj/Main.storyboard
+++ b/EasyPlayer/View/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -648,7 +648,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="599"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WnS-gO-vcL" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="437.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="354"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EasyRTMP-2.0.18.0714" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0x-0a-pIG">
                                                 <rect key="frame" x="12" y="30" width="351" height="19.5"/>
@@ -662,79 +662,49 @@
                                                 <color key="textColor" red="0.29803921570000003" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EasyDarwin开源流媒体服务器：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8G-1E-4Zb">
-                                                <rect key="frame" x="12" y="126.5" width="351" height="17"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="项目地址：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8G-1E-4Zb">
+                                                <rect key="frame" x="12" y="126.5" width="71.5" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <color key="textColor" red="0.29803921570000003" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EmG-i8-jzw">
-                                                <rect key="frame" x="32" y="143.5" width="333" height="30"/>
-                                                <state key="normal" title="http://www.easydarwin.org"/>
+                                                <rect key="frame" x="83.5" y="120" width="281.5" height="30"/>
+                                                <state key="normal" title="https://github.com/EasyDSS/EasyPlayer"/>
                                                 <connections>
                                                     <action selector="easyDarwin:" destination="Wic-H0-bhH" eventType="touchUpInside" id="pFp-ik-JCn"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EasyDSS商用流媒体解决方案：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oJ-fj-Wl6">
-                                                <rect key="frame" x="12" y="183.5" width="351" height="17"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您也可以升级到我们的EasyPlayer Pro全功能版 本，支持HTTP/RTSP/RTMP/HLS等多种流媒体协议！扫描如下的下载：" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5oJ-fj-Wl6">
+                                                <rect key="frame" x="12" y="160" width="351" height="54"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.29803921570000003" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pyS-zg-RjP">
-                                                <rect key="frame" x="32" y="200.5" width="333" height="30"/>
-                                                <state key="normal" title="http://www.easydss.com"/>
-                                                <connections>
-                                                    <action selector="easyDSS:" destination="Wic-H0-bhH" eventType="touchUpInside" id="XQN-Qn-u05"/>
-                                                </connections>
-                                            </button>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iOS_RTMP" translatesAutoresizingMaskIntoConstraints="NO" id="fQG-3b-cQa">
-                                                <rect key="frame" x="137.5" y="317.5" width="100" height="100"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iOS_pro" translatesAutoresizingMaskIntoConstraints="NO" id="fQG-3b-cQa">
+                                                <rect key="frame" x="137.5" y="234" width="100" height="100"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="dri-zI-8Sj"/>
                                                     <constraint firstAttribute="height" constant="100" id="gUj-f2-87V"/>
                                                 </constraints>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EasyNVR无插件直播方案：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Za2-4l-Z2A">
-                                                <rect key="frame" x="12" y="240.5" width="351" height="17"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <color key="textColor" red="0.29803921570000003" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNB-MP-ofe">
-                                                <rect key="frame" x="32" y="257.5" width="331" height="30"/>
-                                                <state key="normal" title="http://www.easynvr.com"/>
-                                                <connections>
-                                                    <action selector="easyNVR:" destination="Wic-H0-bhH" eventType="touchUpInside" id="Pbb-hr-g9P"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
-                                            <constraint firstItem="pyS-zg-RjP" firstAttribute="top" secondItem="5oJ-fj-Wl6" secondAttribute="bottom" id="1BA-Ho-ML6"/>
                                             <constraint firstAttribute="bottom" secondItem="fQG-3b-cQa" secondAttribute="bottom" constant="20" id="1rb-M1-Nyl"/>
                                             <constraint firstItem="WHG-pq-8KR" firstAttribute="top" secondItem="f0x-0a-pIG" secondAttribute="bottom" constant="30" id="2ce-cp-C4e"/>
-                                            <constraint firstAttribute="trailing" secondItem="pyS-zg-RjP" secondAttribute="trailing" constant="10" id="2zg-Hc-wQO"/>
-                                            <constraint firstItem="fQG-3b-cQa" firstAttribute="top" secondItem="jNB-MP-ofe" secondAttribute="bottom" constant="30" id="3vH-wf-Ygn"/>
                                             <constraint firstItem="j8G-1E-4Zb" firstAttribute="top" secondItem="WHG-pq-8KR" secondAttribute="bottom" constant="30" id="4Bw-lN-NqX"/>
                                             <constraint firstItem="f0x-0a-pIG" firstAttribute="top" secondItem="WnS-gO-vcL" secondAttribute="top" constant="30" id="4vJ-Zq-gOD"/>
                                             <constraint firstItem="fQG-3b-cQa" firstAttribute="centerX" secondItem="WnS-gO-vcL" secondAttribute="centerX" id="5Re-EK-J7y"/>
                                             <constraint firstAttribute="trailing" secondItem="5oJ-fj-Wl6" secondAttribute="trailing" constant="12" id="6JS-TG-3lh"/>
                                             <constraint firstItem="5oJ-fj-Wl6" firstAttribute="top" secondItem="EmG-i8-jzw" secondAttribute="bottom" constant="10" id="7ZY-Xw-YR6"/>
-                                            <constraint firstItem="Za2-4l-Z2A" firstAttribute="top" secondItem="pyS-zg-RjP" secondAttribute="bottom" constant="10" id="CZz-z5-aDY"/>
-                                            <constraint firstAttribute="trailing" secondItem="j8G-1E-4Zb" secondAttribute="trailing" constant="12" id="Ill-3J-L5Y"/>
                                             <constraint firstAttribute="trailing" secondItem="f0x-0a-pIG" secondAttribute="trailing" constant="12" id="Ixb-uT-KWq"/>
-                                            <constraint firstItem="pyS-zg-RjP" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="32" id="KBp-dq-dVQ"/>
-                                            <constraint firstItem="Za2-4l-Z2A" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="12" id="LSW-vU-fik"/>
-                                            <constraint firstItem="jNB-MP-ofe" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="32" id="RM9-aH-De1"/>
-                                            <constraint firstItem="jNB-MP-ofe" firstAttribute="top" secondItem="Za2-4l-Z2A" secondAttribute="bottom" id="TQz-0j-09e"/>
-                                            <constraint firstAttribute="trailing" secondItem="jNB-MP-ofe" secondAttribute="trailing" constant="12" id="UdR-kj-QlW"/>
+                                            <constraint firstItem="EmG-i8-jzw" firstAttribute="centerY" secondItem="j8G-1E-4Zb" secondAttribute="centerY" id="LLF-Ub-bbO"/>
                                             <constraint firstItem="WHG-pq-8KR" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="12" id="Y0L-PZ-lbC"/>
                                             <constraint firstAttribute="trailing" secondItem="WHG-pq-8KR" secondAttribute="trailing" constant="12" id="ZEI-mE-Q3I"/>
-                                            <constraint firstItem="EmG-i8-jzw" firstAttribute="top" secondItem="j8G-1E-4Zb" secondAttribute="bottom" id="ggI-ud-CAs"/>
+                                            <constraint firstItem="fQG-3b-cQa" firstAttribute="top" secondItem="5oJ-fj-Wl6" secondAttribute="bottom" constant="20" id="aJE-TS-5cu"/>
+                                            <constraint firstItem="EmG-i8-jzw" firstAttribute="leading" secondItem="j8G-1E-4Zb" secondAttribute="trailing" id="brr-IV-DMl"/>
                                             <constraint firstAttribute="trailing" secondItem="EmG-i8-jzw" secondAttribute="trailing" constant="10" id="hmP-XE-pYp"/>
-                                            <constraint firstAttribute="trailing" secondItem="Za2-4l-Z2A" secondAttribute="trailing" constant="12" id="n4V-y6-zjD"/>
-                                            <constraint firstItem="EmG-i8-jzw" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="32" id="qKW-3S-wmx"/>
                                             <constraint firstItem="j8G-1E-4Zb" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="12" id="xHQ-RC-8ri"/>
                                             <constraint firstItem="f0x-0a-pIG" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="12" id="y99-Gk-Dh6"/>
                                             <constraint firstItem="5oJ-fj-Wl6" firstAttribute="leading" secondItem="WnS-gO-vcL" secondAttribute="leading" constant="12" id="zwx-ai-EBP"/>
@@ -793,7 +763,7 @@
     <resources>
         <image name="address" width="22" height="22"/>
         <image name="frame" width="271" height="271"/>
-        <image name="iOS_RTMP" width="200" height="200"/>
+        <image name="iOS_pro" width="200" height="200"/>
         <image name="nav_back" width="22" height="22"/>
         <image name="scan" width="20" height="20"/>
         <image name="select" width="16" height="16"/>
